--- a/market-news.html
+++ b/market-news.html
@@ -129,10 +129,10 @@
                 <div class="panel-head"><h2>🌾 National Grain Reports</h2></div>
                 <div class="panel-body">
                     <div class="report-grid">
-                        <a href="https://www.ams.usda.gov/market-news/grain-and-oilseed" target="_blank" class="report-card"><h3>🌽 National Corn Summary</h3><p>Cash corn prices, basis, regional summaries</p><span class="action">View Report →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/grain-and-oilseed" target="_blank" class="report-card"><h3>🫘 National Soybean Summary</h3><p>Cash soybean prices, crush margins</p><span class="action">View Report →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/grain-and-oilseed" target="_blank" class="report-card"><h3>🌾 National Wheat Summary</h3><p>HRW, SRW, HRS by class and region</p><span class="action">View Report →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/ethanol" target="_blank" class="report-card"><h3>⛽ Ethanol Report</h3><p>Ethanol production, margins, DDGs</p><span class="action">View Report →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/state-grain-reports" target="_blank" class="report-card"><h3>🌽 State Grain Bids</h3><p>Daily cash grain bids by state (corn, beans, wheat)</p><span class="action">View Reports →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/national-grain-reports" target="_blank" class="report-card"><h3>🌾 National Grain Reports</h3><p>National grain summaries, transport, ethanol</p><span class="action">View Reports →</span></a>
+                        <a href="https://mpr.datamart.ams.usda.gov/" target="_blank" class="report-card"><h3>📊 USDA MPR Datamart</h3><p>Searchable mandatory price reports for all commodities</p><span class="action">View Database →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/livestock-poultry-grain" target="_blank" class="report-card"><h3>📋 LP&G Market News</h3><p>Livestock, poultry & grain market news hub</p><span class="action">View Reports →</span></a>
                     </div>
                 </div>
             </div>
@@ -151,10 +151,10 @@
                 <div class="panel-head"><h2>🥛 National Dairy Reports</h2></div>
                 <div class="panel-body">
                     <div class="report-grid">
-                        <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" class="report-card"><h3>🧀 National Dairy Report</h3><p>All dairy product prices and production</p><span class="action">View Report →</span></a>
-                        <a href="https://mymarketnews.ams.usda.gov/viewReport/2999" target="_blank" class="report-card"><h3>🧈 CME Spot Dairy</h3><p>Cheese, butter, NDM, whey spot prices</p><span class="action">View Report →</span></a>
-                        <a href="https://mymarketnews.ams.usda.gov/viewReport/2996" target="_blank" class="report-card"><h3>📊 Class III/IV Prices</h3><p>Federal Order milk prices</p><span class="action">View Report →</span></a>
-                        <a href="https://mymarketnews.ams.usda.gov/viewReport/2983" target="_blank" class="report-card"><h3>🏭 Dairy Products Report</h3><p>Cheese & butter production</p><span class="action">View Report →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" class="report-card"><h3>🧀 National Dairy Reports</h3><p>All dairy product prices and production data</p><span class="action">View Reports →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/search-market-news" target="_blank" class="report-card"><h3>🔍 Search AMS Reports</h3><p>Search all USDA market news reports by keyword</p><span class="action">Search →</span></a>
+                        <a href="https://mymarketnews.ams.usda.gov/public_data" target="_blank" class="report-card"><h3>📊 Market News Database</h3><p>Searchable dairy, grain & livestock data</p><span class="action">View Database →</span></a>
+                        <a href="/milk-prices.html" class="report-card"><h3>🥛 AGSIST Milk Dashboard</h3><p>Class III/IV prices, cheese, butter trends</p><span class="action">Open Dashboard →</span></a>
                     </div>
                     <div class="info-box" style="margin-top:16px;">
                         <strong>🧀 Wisconsin Dairy:</strong> Wisconsin produces ~26% of US cheese. Class III prices (cheese-based) directly affect WI dairy farmer income. Track cheese spot prices daily at CME.
@@ -193,10 +193,10 @@
                 <div class="panel-head"><h2>🐄 National Livestock Reports</h2></div>
                 <div class="panel-body">
                     <div class="report-grid">
-                        <a href="https://www.ams.usda.gov/market-news/feeder-cattle" target="_blank" class="report-card"><h3>🐄 Feeder Cattle</h3><p>Weekly auction results by weight & grade</p><span class="action">View Report →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/boxed-beef" target="_blank" class="report-card"><h3>🥩 Boxed Beef</h3><p>Choice & Select cutout values</p><span class="action">View Report →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/hogs-and-pork" target="_blank" class="report-card"><h3>🐷 Hogs & Pork</h3><p>Lean hog prices, pork cutouts</p><span class="action">View Report →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/lamb-meat" target="_blank" class="report-card"><h3>🐑 Lamb & Sheep</h3><p>Auction results and prices</p><span class="action">View Report →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/livestock-poultry-grain" target="_blank" class="report-card"><h3>🐄 Livestock & Poultry</h3><p>USDA AMS livestock, poultry & grain hub</p><span class="action">View Reports →</span></a>
+                        <a href="https://mpr.datamart.ams.usda.gov/" target="_blank" class="report-card"><h3>📊 Mandatory Price Reports</h3><p>Cattle, hog, lamb mandatory price data</p><span class="action">View Datamart →</span></a>
+                        <a href="https://mymarketnews.ams.usda.gov/filerepo/reports" target="_blank" class="report-card"><h3>📁 AMS Report Archive</h3><p>Search all published USDA reports</p><span class="action">Search Reports →</span></a>
+                        <a href="/" class="report-card"><h3>💹 AGSIST Live Prices</h3><p>Live cattle, feeder, lean hog futures</p><span class="action">View Dashboard →</span></a>
                     </div>
                 </div>
             </div>
